--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -12,3 +12,28 @@
   transform: scaleY(1.8) !important;
   text-align: center !important;
 }
+
+.custom-radio {
+  position: relative;
+  width: 16px;
+  height: 16px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 50%;
+  border: 1px solid #E13737;
+  outline: none;
+  cursor: pointer;
+}
+
+.custom-radio:checked::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 10px;
+  height: 10px;
+  background-color: #E13737;
+  border-radius: 50%;
+}
