--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -905,6 +905,10 @@ video {
   height: 100vh;
 }
 
+.h-16 {
+  height: 4rem;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -1018,6 +1022,14 @@ video {
   width: max-content;
 }
 
+.w-1\/4 {
+  width: 25%;
+}
+
+.w-\[80\%\] {
+  width: 80%;
+}
+
 .max-w-6xl {
   max-width: 72rem;
 }
@@ -1036,6 +1048,10 @@ video {
 
 .max-w-xs {
   max-width: 20rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
 }
 
 .flex-1 {
@@ -1249,6 +1265,15 @@ video {
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
 
+.border-\[bg-\[\#E13737\]\] {
+  border-color: bg-[#E13737];
+}
+
+.border-\[\#E13737\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(225 55 55 / var(--tw-border-opacity));
+}
+
 .bg-\[\#E13737\] {
   --tw-bg-opacity: 1;
   background-color: rgb(225 55 55 / var(--tw-bg-opacity));
@@ -1301,6 +1326,11 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1365,6 +1395,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .pb-2 {
@@ -1491,6 +1526,20 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-red-300 {
+  --tw-text-opacity: 1;
+  color: rgb(252 165 165 / var(--tw-text-opacity));
+}
+
+.text-\[bg-\[\#E13737\]\] {
+  color: bg-[#E13737];
+}
+
+.text-\[\#E13737\] {
+  --tw-text-opacity: 1;
+  color: rgb(225 55 55 / var(--tw-text-opacity));
 }
 
 .opacity-100 {
