--- a/frontend/src/output.css
+++ b/frontend/src/output.css
@@ -618,6 +618,10 @@ video {
   top: 2rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -784,6 +788,22 @@ video {
 
 .mt-auto {
   margin-top: auto;
+}
+
+.ml-5 {
+  margin-left: 1.25rem;
+}
+
+.ml-0 {
+  margin-left: 0px;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .block {
@@ -1001,8 +1021,8 @@ video {
   width: 50%;
 }
 
-.w-\[68\%\] {
-  width: 68%;
+.w-\[55\%\] {
+  width: 55%;
 }
 
 .w-\[70\%\] {
@@ -1026,20 +1046,12 @@ video {
   width: max-content;
 }
 
-.w-\[65\%\] {
-  width: 65%;
+.w-72 {
+  width: 18rem;
 }
 
-.w-\[62\%\] {
-  width: 62%;
-}
-
-.w-\[60\%\] {
-  width: 60%;
-}
-
-.w-\[55\%\] {
-  width: 55%;
+.w-64 {
+  width: 16rem;
 }
 
 .max-w-6xl {
@@ -1090,6 +1102,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.cursor-not-allowed {
+  cursor: not-allowed;
 }
 
 .grid-cols-1 {
@@ -1184,6 +1200,10 @@ video {
 
 .justify-self-start {
   justify-self: start;
+}
+
+.overflow-hidden {
+  overflow: hidden;
 }
 
 .overflow-y-auto {
@@ -1322,6 +1342,11 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-gray-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-50 {
   --tw-bg-opacity: 0.5;
 }
@@ -1386,6 +1411,11 @@ video {
   padding-bottom: 2rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -1396,6 +1426,10 @@ video {
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -1532,6 +1566,10 @@ video {
 
 .opacity-70 {
   opacity: 0.7;
+}
+
+.opacity-50 {
+  opacity: 0.5;
 }
 
 .shadow-lg {
